create landing page elements

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -1,9 +1,26 @@
 ﻿@page "/"
 
 <PageTitle>Index</PageTitle>
+<div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen">
+<div class="flex flex-col items-center w-fit mx-auto mt-8">
+     <div class="text-8xl font-semibold w-72 flex justify-between">
+        <span class="text-yellow-300">T</span>
+        <span class="text-red-600">I</span>
+        <span class="text-yellow-300">C</span>
+    </div>
+    <div class="text-8xl font-semibold">
+        <span class="text-red-600">T</span>
+        <span class="text-yellow-300">A</span>
+        <span class="text-red-600">C</span>
+    </div>
+    <div class="text-8xl font-semibold">
+        <span class="text-yellow-300">G</span>
+        <span class="text-red-600">O</span>
+    </div>
+</div>
+<button class="m-8 bg-gradient-to-r from-pink-900 to-pink-500 w-fit mx-auto block text-white text-7xl p-8 rounded-r-full rounded-l-full">Start Game</button>
+<button class="m-8 bg-gradient-to-r from-orange-400 to-orange-500 w-fit mx-auto block text-white text-7xl p-8 rounded-r-full rounded-l-full">Join Game</button>
+</div>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+@* <SurveyPrompt Title="How is Blazor working for you?" /> *@
