--- a/UI/Shared/MainLayout.razor
+++ b/UI/Shared/MainLayout.razor
@@ -1,19 +1,20 @@
 ﻿@inherits LayoutComponentBase
 
-<PageTitle>UI</PageTitle>
+@* <PageTitle>UI</PageTitle> *@
 
-<div class="page">
-    <div class="sidebar">
+@* <div class="page"> *@
+    @* <div class="sidebar">
         <NavMenu />
-    </div>
+    </div> *@
 
     <main>
-        <div class="top-row px-4">
+        @* <div class="top-row px-4">
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
-        </div>
+        </div> *@
 
-        <article class="content px-4">
-            @Body
-        </article>
+        @* <article class="content px-4">
+           
+        </article> *@
+         @Body
     </main>
-</div>
+@* </div> *@
