--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>TicTacGo | Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1 class="text-3xl">Hello, devs!</h1>
 
 Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
