create x and square marks components

--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -6,6 +6,9 @@
         <div></div>
     </div>
     <div>
-        
+        @* <Smark Width="12" Height="12"/>
+        <Xmark Width="12" Height="12"/> *@
+        <Smark />
+        <Xmark />
     </div>
 </div>
