comment tailwindcss CDN script

--- a/UI/Pages/_Host.cshtml
+++ b/UI/Pages/_Host.cshtml
@@ -14,7 +14,7 @@
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
-    <script src="https://cdn.tailwindcss.com"></script>
+    @* <script src="https://cdn.tailwindcss.com"></script> *@
     <component type="typeof(App)" render-mode="ServerPrerendered" />
 
     <div id="blazor-error-ui">
