--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -1,28 +1,10 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>TicTacGo | Home</PageTitle>
 <div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen flex flex-col justify-around items-center p-20">
-<div class="flex flex-col items-center w-fit mx-auto">
-     <div class="text-6xl font-semibold w-44 flex justify-between">
-        <span class="text-yellow-300">T</span>
-        <span class="text-red-600">I</span>
-        <span class="text-yellow-300">C</span>
-    </div>
-    <div class="text-6xl font-semibold">
-        <span class="text-red-600">T</span>
-        <span class="text-yellow-300">A</span>
-        <span class="text-red-600">C</span>
-    </div>
-    <div class="text-6xl font-semibold">
-        <span class="text-yellow-300">G</span>
-        <span class="text-red-600">O</span>
-    </div>
-</div>
-<div>
+    <Logo></Logo>
+    <div>
     <a href="/game" class="mb-4 text-4xl bg-gradient-to-r from-pink-900 to-pink-500 w-60 text-center mx-auto block text-white p-3 rounded-r-full rounded-l-full">Start Game</a>
     <a class=" text-4xl bg-gradient-to-r from-orange-400 to-orange-500 mx-auto block text-white p-3 text-center w-60 rounded-r-full rounded-l-full">Join Game</a>
+    </div>
 </div>
-</div>
-
-
-@* <SurveyPrompt Title="How is Blazor working for you?" /> *@
