add styling to GameGrid component

--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -1,8 +1,7 @@
 @page "/game";
 @using TicTacGo.Enums
 
-<div class="bg-gradient-to-r from-indigo-800 to-indigo-900">
-    <h1>This is my game blazor component</h1>
+<div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen">
     <GameGrid GridCells="@ActiveCells" />
 </div>
 
