--- a/UI/Shared/GameGrid.razor
+++ b/UI/Shared/GameGrid.razor
@@ -1,16 +1,16 @@
 @using TicTacGo.Enums
 
-<div class="bg-indigo-600 grid grid-cols-3 grid-rows-3 gap-2 h-80 w-80 m-2 p-2">
+<div class="bg-indigo-600 grid grid-cols-3 grid-rows-3 gap-2 h-80 w-80 m-auto mt-2 mb-2 p-2 rounded-lg">
     @foreach (var cell in GridCells)
     {
-        <div class="bg-indigo-900 rounded-lg  flex items-center justify-center text-2xl">
+        <div class="bg-indigo-900 rounded-lg  flex items-center justify-center">
            @if (cell.ToString() == "NotSet")
            {
             
            }else if (cell.ToString() == "X"){
-            <img src="assets/X.svg"/>
+            <img src="icons/X.svg" class="w-1/2"/>
            }else {
-            @cell.ToString()
+            <img src="icons/O.svg" class="w-3/5"/>
            }
         </div>
     }
