fix building error

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -7,5 +7,5 @@
         <a class="cursor-pointer mb-4 text-4xl bg-gradient-to-r from-pink-900 to-pink-500 w-60 text-center mx-auto block text-white p-3 rounded-r-full rounded-l-full">Start Game</a>
         <a class="cursor-pointer text-4xl bg-gradient-to-r from-orange-400 to-orange-500 mx-auto block text-white p-3 text-center w-60 rounded-r-full rounded-l-full">Join Game</a>
     </div>
-<PlayerCard Image="https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-Vector.png" Name="Dan" Mark="icons/x-mark.svg" Active=true></PlayerCard>
+<PlayerCard Image="https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-Vector.png" Name="Dan" Mark="icons/x-mark.svg" Active="true"></PlayerCard>
 </div>
