--- a/UI/Shared/PlayerCard.razor
+++ b/UI/Shared/PlayerCard.razor
@@ -1,5 +1,5 @@
 
-<div class="user-card bg-indigo-900 h-screen grid content-between justify-items-center p-2 @(Active? border-2 border-neutral-50 : '')">
+<div class="user-card bg-indigo-900 h-screen grid content-between justify-items-center p-2">
 
     <div class="user-img rounded-full overflow-hidden h-80 w-80">
         <img src="@Image" />
@@ -14,7 +14,7 @@
     </div>
 
 </div>
-<h2 class="@Active? visible : hidden"> Your turn</h2>
+
 
 @code {
     [Parameter]
