--- a/UI/Shared/PlayerCard.razor
+++ b/UI/Shared/PlayerCard.razor
@@ -1,15 +1,15 @@
 
-<div class="user-card bg-indigo-900 h-screen grid content-between justify-items-center p-2">
+<div class="bg-indigo-900 h-screen grid content-between justify-items-center p-2">
 
-    <div class="user-img rounded-full overflow-hidden h-80 w-80">
+    <div class="rounded-full overflow-hidden h-80 w-80">
         <img src="@Image" />
     </div>
 
-    <div class="user-name text-3xl font-semibold w-31 h-19">
+    <div class="text-3xl font-semibold w-31 h-19">
         <h1 class="text-white">@Name</h1>
     </div>
 
-    <div class="user-choice h-48 w-30">
+    <div class="h-48 w-30">
         <img src="@Mark" />
     </div>
 
