--- a/UI/Shared/GameGrid.razor
+++ b/UI/Shared/GameGrid.razor
@@ -1,11 +1,12 @@
 @using TicTacGo.Enums
+@using TicTacGo.Models
 
 <div class="bg-indigo-600 grid grid-cols-3 grid-rows-3 gap-2 h-80 w-80 m-auto mb-2 p-2 rounded-lg">
     @for (int i = 0; i < GridCells.Length; i++)
     {
         Marks cell = GridCells[i];
         int index = i;
-        <button @onclick="(()=> PlaceMark(cell, index))" class="bg-indigo-900 rounded-lg  flex items-center justify-center cursor-pointer">
+        <button @onclick="() => PlaceMark(cell, index)" class="bg-indigo-900 rounded-lg  flex items-center justify-center cursor-pointer">
             @if (cell == Marks.X) {
                 <img src="icons/X.svg" class="w-1/2"/>
             } else if (cell == Marks.O) {
@@ -22,9 +23,18 @@
     [Parameter]
     public Marks ActiveMark {get; set;}
 
+    [Parameter]
+    public EventCallback<CellModel> OnClickFunction { get; set; }
+
     public void PlaceMark(Marks cell, int index) {
         if (cell == Marks.NotSet) {
             GridCells[index] = ActiveMark;
         }
+
+        CellModel model = new CellModel();
+        model.SetMark = ActiveMark;
+        model.CellIndex = index;
+
+        OnClickFunction.InvokeAsync(model);
     }
 }
