add conditional styling for card active status

--- a/UI/Pages/Index.razor
+++ b/UI/Pages/Index.razor
@@ -1,4 +1,4 @@
-﻿@page "/play"
+﻿@page "/"
 
 <PageTitle>TicTacGo | Home</PageTitle>
 <div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen flex flex-col justify-around items-center p-20">
