--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -1,7 +1,10 @@
 @page "/game";
 @using TicTacGo.Enums
-
 <div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen">
+    <div class="flex justify-center gap-9">
+        <PlayerCard Image="https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-Vector.png" Name="Dan" Mark="icons/x-mark.svg" Active="false"></PlayerCard>
+        <PlayerCard Image="https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-PNG-Images-HD.png" Name="Emma" Mark="icons/o-mark.svg" Active="true"></PlayerCard>
+    </div>
     <GameGrid GridCells="@GridCells" ActiveMark="@ActiveMark" />
 </div>
 
