--- a/UI/Shared/PlayerCard.razor
+++ b/UI/Shared/PlayerCard.razor
@@ -1,18 +1,22 @@
-<div class="bg-indigo-900 w-28 h-48 grid content-between justify-items-center rounded-3xl p-2 @GetActiveStateCssClasses(Active)">
-        <div class="rounded-full h-20 w-20">
-            <img src="@Image" />
-        </div>
-        <div class="text font-semibold w-8 h-5">
-            <h1 class="text-white">@Name</h1>
-        </div>
-        <div class="max-w-full max-h-full h-10 w-8 text-center flex items-center justify-center">
-            <img src="@Mark" class="w-full h-full"/>
-        </div>
-</div>
-@if (Active) {
+<div class="grid justify-items-center mb-5">
+    <div class="bg-indigo-950 w-28 h-48 grid content-between justify-items-center justify-between rounded-xl p-1 @GetActiveStateCssClasses(Active)">
+            <div class="rounded-full min-w-ful h-20 w-20 max-w-max mx-2">
+                <img src="@Image"/>
+            </div>
+            <div class="grid content-center text font-semibold w-12 h-9 max-w-max">
+                <h1 class="text-white text-center">@Name</h1>
+            </div>
+            <div class="max-w-full max-h-full h-12 w-8 text-center flex items-center justify-center">
+                <img src="@Mark" class="w-full h-full"/>
+            </div>
+    </div>
+    
+    @if (Active) {
+        
+        <div class="text-white text-lg font-semibold text-center mt-2">Your turn</div>
+    }
 
-    <div class="text-white text-lg font-semibold">Your turn</div>
-}
+</div>
 
 @code {
 
@@ -29,6 +33,6 @@
     public bool Active { get; set; } = false;
 
     private string GetActiveStateCssClasses(bool Active) {
-        return Active == true ? "border-4 border-white rounded-3xl" : "";
+        return Active == true ? "border-2 border-white" : "";
     }
 }
