remove the outline from the name inside playercard

--- a/UI/Shared/PlayerCard.razor
+++ b/UI/Shared/PlayerCard.razor
@@ -4,7 +4,7 @@
                 <img src="@Image"/>
             </div>
             <div class="grid content-center text font-semibold w-12 h-9 max-w-max">
-                <h1 class="text-white text-center">@Name</h1>
+                <h1 class="text-white text-center outline-0">@Name</h1>
             </div>
             <div class="max-w-full max-h-full h-12 w-8 text-center flex items-center justify-center">
                 <img src="@Mark" class="w-full h-full"/>
