remove duplicate svg icons

--- a/UI/Shared/GameGrid.razor
+++ b/UI/Shared/GameGrid.razor
@@ -7,9 +7,9 @@
         int index = i;
         <button @onclick="(()=> PlaceMark(cell, index))" class="bg-indigo-900 rounded-lg  flex items-center justify-center cursor-pointer">
             @if (cell == Marks.X) {
-                <img src="icons/X.svg" class="w-1/2"/>
+                <img src="icons/x.svg" class="w-1/2"/>
             } else if (cell == Marks.O) {
-                <img src="icons/O.svg" class="w-3/5"/>
+                <img src="icons/o.svg" class="w-3/5"/>
             }
         </button>
     }
