--- a/UI/Shared/GameGrid.razor
+++ b/UI/Shared/GameGrid.razor
@@ -24,13 +24,28 @@
     public Marks ActiveMark {get; set;}
 
     [Parameter]
+    public EventCallback<Marks> updateParentActiveMark {get; set;}
+
+    [Parameter]
     public EventCallback<CellModel> OnClickFunction { get; set; }
 
+    private void updateActiveMark (Marks mark) {
+        ActiveMark = mark;
+        updateParentActiveMark.InvokeAsync(ActiveMark);
+    }
+        
     public void PlaceMark(Marks cell, int index) {
+        Console.WriteLine(ActiveMark);
         if (cell == Marks.NotSet) {
             GridCells[index] = ActiveMark;
+            if (ActiveMark == Marks.O) {
+                ActiveMark = Marks.X;
+            }else {
+                ActiveMark = Marks.O;
+            }
+            updateActiveMark(ActiveMark);
+            Console.WriteLine(ActiveMark);
         }
-
         CellModel model = new CellModel();
         model.SetMark = ActiveMark;
         model.CellIndex = index;
