--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -12,28 +12,42 @@
 
 <div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen">
     <div class="flex justify-center gap-9">
-        <PlayerCard Image="https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-Vector.png" Name="Dan" Mark="icons/x.svg" Active="@PlayerOne"></PlayerCard>
-        <PlayerCard Image="https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-PNG-Images-HD.png" Name="Emma" Mark="icons/o.svg" Active="@PlayerTwo"></PlayerCard>
+        <PlayerCard Player="@PlayerOne" ActiveMark="@ActiveMark" />
+        <PlayerCard Player="@PlayerTwo" ActiveMark="@ActiveMark" />
     </div>
     
-    <GameGrid GridCells="@GridCells" ActiveMark="@ActiveMark" OnClickFunction="@MakeMove" updateParentActiveMark="@updateActiveMark" />
+    <GameGrid GridCells="@GameBoard" ActiveMark="@ActiveMark" OnClickFunction="@MakeMove" UpdateParentActiveMark="@UpdateActiveMark" />
 </div>
 
 @code {
     private HubConnection? hubConnection;
-    public bool PlayerOne = true;
-    public bool PlayerTwo = false;
-    public Marks[] GridCells = new Marks[] { Marks.NotSet, Marks.NotSet, Marks.NotSet, Marks.NotSet, Marks.NotSet, Marks.NotSet, Marks.NotSet, Marks.NotSet, Marks.NotSet };
+    public Marks[] GameBoard = new Marks[9];
     private Marks ActiveMark = Marks.X;
 
-    private void updateActiveMark (Marks mark) {
-        ActiveMark = mark;
-        if (ActiveMark == Marks.O){
-            PlayerOne = true;
-            PlayerTwo = false;
-        }else {
-            PlayerOne = false;
-            PlayerTwo = true;
+    PlayerModel PlayerOne = new PlayerModel
+    {
+      Name = "Dan",
+      ImageUrl = "https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-Vector.png",
+      Mark = Marks.X,
+      HasTurn = true
+    };
+
+    PlayerModel PlayerTwo = new PlayerModel
+    {
+      Name = "Emma",
+      ImageUrl = "https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-PNG-Images-HD.png",
+      Mark = Marks.O,
+      HasTurn = false
+    };
+
+    private void UpdateActiveMark(Marks mark) {
+        if (mark == Marks.X)
+        {
+          ActiveMark = Marks.O;
+        }
+        else
+        {
+          ActiveMark = Marks.X;
         }
     }
 
@@ -43,9 +57,17 @@
             .WithUrl(Navigation.ToAbsoluteUri("/gamehub"))
             .Build();
 
-        hubConnection.On<CellModel>("ReceiveMove", (model) =>
+        hubConnection.On<Marks[]>("DrawGameBoard", (model) =>
         {
-            GridCells[model.CellIndex] = model.SetMark;
+            GameBoard = model;
+            
+            InvokeAsync(StateHasChanged);
+        });
+
+        hubConnection.On<PlayerMoveModel>("ReceiveMove", (model) =>
+        {
+            GameBoard[model.CellIndex] = model.SetMark;
+            ActiveMark = model.NextMark;
             
             InvokeAsync(StateHasChanged);
         });
@@ -56,7 +78,7 @@
     public bool IsConnected =>
         hubConnection?.State == HubConnectionState.Connected;
 
-    public async Task MakeMove(CellModel model)
+    public async Task MakeMove(PlayerMoveModel model)
     {
         if (hubConnection is not null)
         {
