center components inside the playercard

--- a/UI/Shared/PlayerCard.razor
+++ b/UI/Shared/PlayerCard.razor
@@ -1,5 +1,5 @@
 <div class="grid justify-items-center mb-5">
-    <div class="bg-indigo-950 w-28 h-48 grid content-between justify-items-center justify-between rounded-xl p-1 @GetActiveStateCssClasses(Active)">
+    <div class="bg-indigo-950 w-28 h-48 grid content-around justify-items-center justify-center rounded-xl p-1 @GetActiveStateCssClasses(Active)">
             <div class="rounded-full min-w-ful h-20 w-20 max-w-max mx-2">
                 <img src="@Image"/>
             </div>
