--- a/UI/Pages/Game.razor
+++ b/UI/Pages/Game.razor
@@ -10,8 +10,8 @@
 
 <PageTitle>TicTacGo Game</PageTitle>
 
-<div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen">
-    <div class="flex justify-center gap-9">
+<div class="bg-gradient-to-r from-violet-900 to-purple-900 h-screen pb-8 pt-40">
+    <div class="flex justify-center gap-9 pb-6">
         <PlayerCard Image="https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-Vector.png" Name="Dan" Mark="icons/x.svg" Active="false"></PlayerCard>
         <PlayerCard Image="https://www.pngall.com/wp-content/uploads/12/Avatar-Profile-PNG-Images-HD.png" Name="Emma" Mark="icons/o.svg" Active="true"></PlayerCard>
     </div>
